# microagenda

./: CMakeLists.txt  README.md
docs/: markdown-elements.md
packaging/: microagenda.desktop.in
src/agenda/: AgendaStore.cpp  AgendaStore.h
src/app/: Application.cpp  Application.h  main.cpp
src/attachments/: AttachmentService.cpp  AttachmentService.h
src/editor/: MarkdownEditor.cpp  MarkdownEditor.h  SoftWrap.cpp  SoftWrap.h
src/markdown/: MarkdownParser.cpp  MarkdownParser.h  RenderModel.cpp  RenderModel.h
src/perf/: Perf.cpp  Perf.h
src/platform/: DefaultOpener.cpp  DefaultOpener.h  DurableFile.cpp  DurableFile.h  PathUtils.cpp  PathUtils.h
src/ui/: AppState.cpp  AppState.h  ShellModel.h
tests/: AgendaStoreTests.cpp  AppStateTests.cpp  AttachmentTests.cpp  EditorViewerTests.cpp  MarkdownParserTests.cpp  PathUtilsTests.cpp  TestMain.cpp  TestSupport.h
tools/: PerfMain.cpp
